--- a/BurgerTimeTheGame/BomberManTheGame.vcxproj
+++ b/BurgerTimeTheGame/BomberManTheGame.vcxproj
@@ -195,6 +195,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClCompile Include="HobbinComponent.cpp" />
     <ClCompile Include="Ingredient.cpp" />
     <ClCompile Include="IngredientPart.cpp" />
+    <ClCompile Include="IngredientPartComponent.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="PlayerOne.cpp" />
     <ClCompile Include="PlayerTwo.cpp" />
@@ -220,6 +221,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClInclude Include="HobbinComponent.h" />
     <ClInclude Include="Ingredient.h" />
     <ClInclude Include="IngredientPart.h" />
+    <ClInclude Include="IngredientPartComponent.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="PlayerTwo.h" />
     <ClInclude Include="GameCommands.h" />
